- Commit 0001-fixed-unresponsive-vdr.diff by TomJoad@vdr-portal.de
- Commit 0002-removed-variableduplications.diff by TomJoad@vdr-portal.de
- Commit 0003-more-cleanups.diff by TomJoad@vdr-portal.de
- Commit 0004-Remote-timers-in-menu-myedittimer.diff by TomJoad@vdr-portal.de
  http://www.vdr-portal.de/board17-developer/board21-vdr-plugins/p1291771-epgsearch-f%C3%BCr-vdr-2-3-x/#post1291771

2013-03-xx; Version 1.0.1 - maintenance release
new:
- new Makefile style as introduced in vdr-1.7.36, the old Makefile still exists as 
  Makefile.before.1.7.36 for previous vdr builds. Many thanks to Copperhead, Stefan 
  Hofmann and Christopher Reimer for their work.
- implement device bonding in conflict checker, thanks to Joachim Wilke for providing a patch
- new service interface "Epgsearch-enablesearchtimers-v1.0" to switch the search timers 
  background update on/off. Updated the sample in source/vdr-epgsearchclient-0.0.2.tgz 
  to use the new service.
- new format specifier like %02i in the epgsearchcats.conf, thanks to Joe_D for providing
  a patch ('man 5 epgsearchcats.conf' for more information).
- in the menu 'recordings done' you can now toggle the blue key to 'Orphaned' to show
  recordings with vanished search timers.
- when channel separators are displayed the filling '-' can cause problems in the output
  of graphlcd. Set PLUGIN_EPGSEARCH_SEP_ITEMS=--- in your Make.config to avoid this. Most
  skins (except classic, st:tng)  will translate '---' into a single line anyway 
  (Feature #857, thanks to 'KeineAhnung' for providing a patch)
- search timers are now processed by their descending timer priority. Search timers with the same priority
  are sorted by their search term. Thanks to Anonym for providing a patch 
- new bugtracker at http://projects.vdr-developer.org/projects/plg-epgsearch - thanks to Tobias Grimm
- dropped old code for vdr < 1.6.0, thanks to Ville Skyttä for whole pile of patches
- updated MainMenuHooks patch to 1.0.1