@@ -28,6 +28,8 @@ new:
 - Commit 0003-more-cleanups.diff by TomJoad@vdr-portal.de
 - Commit 0004-Remote-timers-in-menu-myedittimer.diff by TomJoad@vdr-portal.de
   http://www.vdr-portal.de/board17-developer/board21-vdr-plugins/p1291771-epgsearch-f%C3%BCr-vdr-2-3-x/#post1291771
+- Commit fixblacklist_handling.diff by TomJoad@vdr-portal.de
+  http://www.vdr-portal.de/board16-video-disk-recorder/board99-distributionen/board107-mld/p1292085-epgsearch-in-verbindung-mit-epgd-epg2vdr-live-absturz-unter-vdr-2-3-4/#post1292085
 
 2013-03-xx; Version 1.0.1 - maintenance release
 new:
